Fix Button on mobile

--- a/src/components/Button/Button.styl
+++ b/src/components/Button/Button.styl
@@ -382,6 +382,10 @@
 		line-height 38px
 		min-width 360px
 
+		@media $phone {
+			min-width 280px	
+		}
+
 		.Button__inner {
 			padding 41px 22px
 			border-radius 8px
